feat: run the server on macOS, and configure it from the command line (#15)
Runs the dedicated server natively on aarch64-darwin, and gives `nix run` a way
to configure and mod a server with no deployment behind it:

    nix run github:hcbt/nixzoid -- --workshop 3773911887,3774826484 --set MaxPlayers=16

## macOS

App 380870 ships a macOS depot, 380872, and it is a native arm64 build — an
arm64 Azul Zulu JRE and universal JNI natives. No Rosetta. The shared 380871
depot is reused, so a Mac fetches 205M on top of what both platforms need.
`dontStrip` on darwin, because every Mach-O there is signed and strip
invalidates it. No x86_64-darwin: that depot's `java` is thin arm64.

DepotDownloader cannot fetch inside a Nix build on darwin unpatched.
`AccountSettingsStore` opens an `IsolatedStorageFile` in a static field, and on
macOS .NET resolves the home directory from passwd rather than `$HOME` — a
build user's is `/var/empty`, so it throws before `Main` reads a flag. The
overlay patches it, darwin-only.

macOS defaults to Steam networking off: depot 1005, the macOS Steamworks
redist, is not available anonymously. It is a default, not a limit —
`ZOMBOID_STEAMCLIENT_DIR` plus `--steam` reaches `*** Steam is enabled`.

## Configuring and modding from the command line

Every runtime variable gains a flag, plus `--set`, `--mod`, `--sandbox` and
`--workshop`, all taking comma-separated lists. `--workshop` downloads each
item with DepotDownloader (`-app 108600 -pubfile`, anonymous), installs every
mod it carries, and enables them by reading `id=` out of each `mod.info` — so a
workshop id alone is enough, on either platform, with no Steam account.

Two new packages carry the logic that a check can actually run:
`zomboid-render-config` renders the same two files `config-format.nix` does,
and `checks.render-config` diffs them byte for byte; `zomboid-workshop`
installs items, and `checks.workshop-install` exercises it offline.

The launcher checks now cover both platforms from ei